# panelbox

./: .flake8  .git-blame-ignore-revs  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  =6.0.0  ANALISE_PAPERS_2026-02-05.md  ARCHITECTURE_QUICK_REFERENCE.md  BADGES_ADDED.md  CHANGELOG.md  CHANGELOG_SPATIAL.md  CNAME  CODEBASE_ARCHITECTURE.md  CODEBASE_EXPLORATION_INDEX.md  CODEBASE_EXPLORATION_README.md  CODEBASE_EXPLORATION_SUMMARY.md  CODEBASE_STRUCTURE_ANALYSIS.md  CODECOV_SETUP.md  CODECOV_SETUP_GUIDE.md  CODE_OF_CONDUCT.md  COMPLETE_PROJECT_SUMMARY.md  CONTRIBUTING.md  COPYRIGHT_HEADER.txt  COUNT_MODELS_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS_V08.md  DEVELOPMENT_SUMMARY_V07.md  EXPLORATION_COMPLETE.md  EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.md  FASE1_QR_COMPLETION_REPORT.md  FASE1_SPATIAL_IMPLEMENTATION_REPORT.md  FASE2_SPATIAL_DIAGNOSTICS_COMPLETE.md  FASE3_ADVANCED_QR_COMPLETION_REPORT.md  FASE3_SDM_EFFECTS_COMPLETION_REPORT.md  FASE4_GNS_SPATIAL_HAC_REPORT.md  (+156 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_quantile.md  feature_request.md
.github/workflows/: docs.yml  mutation.yml  publish.yml  quantile_validation.yml  r_validation.yml  tests.yml
404/: index.html
DOCUMENTATION_UPDATED_V08/: index.html
FAQ_ADVANCED/: index.html
FAQ_SPATIAL/: index.html
FRONTIER/prompts/: PROMPT_FASE3B_TFP_DECOMPOSITION.md
SFA_DIAGNOSTICS/: index.html
TRUE_MODELS_GUIDE/: index.html
api/: index.html
api/censored/: index.html
api/cli/: index.html
api/cointegration/: index.html
api/core/: index.html
api/count/: index.html
api/datasets/: index.html
api/diagnostics/: index.html
api/discrete/: index.html
api/discrete_models/: index.html
api/experiment/: index.html
api/frontier/: index.html
api/gmm/: index.html
api/iv/: index.html
api/marginal-effects/: index.html
api/models/: index.html
api/multinomial_logit/: index.html
api/ppml/: index.html
api/quantile/: index.html
api/report/: index.html
api/results/: index.html
api/selection/: index.html
api/spatial/: index.html  index.rst
api/specification_tests/: index.html
api/standard-errors/: index.html
api/static-models/: index.html
api/unit_root/: index.html
api/validation/: index.html
api/var/: index.html
api/var_causality/: index.html
api/var_gmm/: index.html
api/visualization/: index.html
assets/images/: index.html
benchmarks/: index.html  visualization_performance.py
benchmarks/comparison/: index.html
benchmarks/gmm/: index.html
benchmarks/gmm_performance/: index.html
benchmarks/heckman/: index.html
benchmarks/heckman_performance/: index.html
benchmarks/performance_report/: index.html
benchmarks/sfa/: index.html
benchmarks/spatial/: index.html
community/presentation_outline/: index.html
community/social_media_announcement/: index.html
community/social_media_kit/: index.html
contributing/changelog/: index.html
contributing/code-of-conduct/: index.html
contributing/contributing/: index.html
contributing/roadmap/: index.html
count_models_implementation_report/: index.html
desenvolvimento/: COVERAGE_ANALYSIS.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_PROGRESS_REPORT.md  FASE_8.3_MYPY_ANALYSIS.md  FASE_8.3_QUALIDADE_CODIGO_STATUS.md  FASE_8_POLIMENTO_PUBLICACAO.md  FINAL_COVERAGE_SUMMARY.md  SESSION_2_PROGRESS.md
desenvolvimento/VAR/: FASE_4.md
diagnostics/: index.html
diagnostics/cointegration/: index.html
diagnostics/cross-sectional/: index.html
diagnostics/heteroskedasticity/: index.html
diagnostics/robustness/: index.html
diagnostics/serial-correlation/: index.html
diagnostics/specification/: index.html
diagnostics/unit-root/: index.html
docs/: 404.md  DOCUMENTATION_UPDATED_V08.md  FAQ_ADVANCED.md  FAQ_SPATIAL.md  SFA_DIAGNOSTICS.md  TRUE_MODELS_GUIDE.md  _inventory.md  index.md
docs/_archive/: count_models_implementation_report.md
docs/api/: censored.md  cli.md  cointegration.md  core.md  count.md  datasets.md  diagnostics.md  discrete.md  discrete_models.md  experiment.md  frontier.md  frontier.rst  gmm.md  index.md  iv.md  marginal-effects.md  models.md  multinomial_logit.md  ppml.md  quantile.md  report.md  results.md  selection.md  spatial.md  standard-errors.md  (+8 more)
examples/: .gitignore  CHART_GALLERY.md  PLANEJAMENTO_VALIDACAO_NOTEBOOKS.md  README.md  README_CHART_SELECTION.md  basic_usage.py  bc92_example.py  complete_workflow_example.py  complete_workflow_v07.py  custom_themes_tutorial.md  export_charts_example.py  fisher_unit_root_example.py  four_component_bootstrap_example.py  four_component_example.py  gallery_generator.py  gamma_example.py  ips_unit_root_example.py  kumbhakar_1990_example.py  lee_schmidt_1993_example.py  llc_unit_root_example.py  minimal_report_example.py  productivity_analysis.py  report_generation_example.py  serialization_example.py  sfa_basic_usage.py  sfa_bc95_determinants.py  sfa_css_example.py  sfa_gamma_example.py  sfa_model_selection.py  sfa_panel_usage.py  sfa_true_bc95.py  sfa_true_models.py  sfa_visualization_gallery.py  simple_report_example.py  spatial_lm_tests_example.py  standard_errors_comparison_example.py  validation_example.py  wang_2002_example.py
getting-started/: index.html
inference/: index.html
javascripts/: mathjax.js
mutants/: mutmut-stats.json  pyproject.toml
panelbox/: __init__.py  __version__.py  _logging.py
paper/: spatial_panelbox_draft.tex
quantile_regression/: index.html
scripts/: build_package.sh  qa.sh  release.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  strategies.py  test_integration_namespace.py  test_new_estimators.py  test_predict_infrastructure.py  test_save_load_universal.py  test_serialization_integration.py  test_serialization_simple.py
tutorials/: index.html  jtest_tutorial.ipynb  multinomial_tutorial.ipynb  panel_cointegration.ipynb  ppml_gravity.ipynb  sfa_tutorial.ipynb
user-guide/: index.html
validation/: README.md
(+2299 files in other folders)
