[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panelbox"
version = "0.8.0"
description = "Panel data econometrics in Python: Fixed Effects, Random Effects, GMM (Arellano-Bond, Blundell-Bond), Experiment Pattern with Result Containers (Validation, Comparison, Residual), Test Runners & Master Reports, Interactive Visualizations (35 Charts), Professional HTML Reports, Robust Standard Errors (HC, Clustered, Driscoll-Kraay, Newey-West), Comprehensive Diagnostics"
authors = [
    {name = "Gustavo Haase", email = "gustavo.haase@gmail.com"},
    {name = "Paulo Dourado", email = "paulodourado.unb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "econometrics",
    "panel data",
    "GMM",
    "Arellano-Bond",
    "Blundell-Bond",
    "fixed effects",
    "random effects",
    "dynamic panel",
    "instrumental variables",
    "robust standard errors",
    "clustered standard errors",
    "heteroskedasticity",
    "Driscoll-Kraay",
    "Newey-West",
    "HAC",
    "bootstrap",
    "sensitivity analysis",
    "robustness",
    "visualization",
    "plotly",
    "interactive charts",
    "data visualization",
    "econometric tests"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "patsy>=0.5.3",
    "tqdm>=4.65.0",
    "jinja2>=3.1.0",
    "plotly>=5.14.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.15.0",
    "pyright>=1.1.400",
    "interrogate>=1.7.0",
    "vulture>=2.14",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=1.10.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
panelbox = "panelbox.cli.main:main"

[project.urls]
Homepage = "https://github.com/PanelBox-Econometrics-Model/panelbox"
Documentation = "https://github.com/PanelBox-Econometrics-Model/panelbox/tree/main/docs"
Repository = "https://github.com/PanelBox-Econometrics-Model/panelbox"
Issues = "https://github.com/PanelBox-Econometrics-Model/panelbox/issues"
Changelog = "https://github.com/PanelBox-Econometrics-Model/panelbox/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--timeout=300",
    "--strict-markers",
    "-x",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks performance benchmark tests",
    "r_validation: marks tests that require R",
    "integration: marks integration tests",
    "property: marks property-based tests (Hypothesis)",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.coverage.run]
source = ["panelbox"]
branch = true
omit = [
    "panelbox/cli/*",
    "panelbox/templates/*",
    "panelbox/gmm/test_*.py",
    "panelbox/tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 55
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass",
    "\\.\\.\\.",
]
exclude_also = [
    "def __repr__",
    "def __str__",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "venv",
    "env",
    "desenvolvimento",
    "htmlcov",
    "vulture_whitelist.py",
    "mutants",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (NumPy convention)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "NPY",  # numpy-specific rules
    "PD",   # pandas-vet
    "PT",   # flake8-pytest-style
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "TC",   # type-checking imports
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (seguranca)
]

ignore = [
    "E501",   # line too long (formatter cuida)
    "D100",   # missing docstring in public module (ativar depois)
    "D102",   # missing docstring in public method (ativar depois)
    "D103",   # missing docstring in public function (ativar depois)
    "D104",   # missing docstring in public package (ativar depois)
    "D105",   # missing docstring in magic method (ativar depois)
    "D401",   # non-imperative-mood (too many false positives in scientific context)
    "RUF001", # ambiguous unicode character in string (Portuguese text)
    "RUF002", # ambiguous unicode character in docstring (Portuguese text)
    "RUF003", # ambiguous unicode character in comment (Portuguese text)
    "PD011",  # pandas use of .values (common in scientific computing)
    "NPY002", # numpy legacy random (gradual migration)
    "N803",   # argument name should be lowercase (econometrics: X, Y, Z, N, T, K)
    "N806",   # variable in function should be lowercase (econometrics conventions)
    "N802",   # function name should be lowercase (e.g., Hansen_J)
    "N801",   # class name should use CapWords (existing conventions)
    "N812",   # lowercase imported as non-lowercase
    "N815",   # mixed-case variable in class scope
    "E741",   # ambiguous variable name (econometrics: l, I, O)
    "B023",   # function-uses-loop-variable (common pattern in plotly callbacks)
    "SIM108", # if-else-block-instead-of-if-exp (readability preference)
    "RUF012", # mutable-class-default (dataclass-style patterns)
    "RUF013", # implicit-optional (will fix gradually)
    "PD003",  # pandas-use-of-dot-is-null
    "PD010",  # pandas-use-of-dot-pivot-or-unstack
    "RUF034", # useless-if-else (false positives in econometric code)
    "SIM102", # collapsible-if (readability preference, nested ifs often clearer)
    "SIM105", # suppressible-exception (try/except/pass is clear enough)
    "PT028",  # pytest-parameter-with-default-argument
    "PT011",  # pytest-raises-too-broad
    "PT018",  # pytest-composite-assertion
    "B027",   # empty-method-without-abstract-decorator (template pattern)
    "ANN001", # missing type annotation for function argument (gradual migration)
    "ANN002", # missing type annotation for *args (gradual migration)
    "ANN003", # missing type annotation for **kwargs (gradual migration)
    "ANN201", # missing return type for public function (gradual migration)
    "ANN202", # missing return type for private function (gradual migration)
    "ANN204", # missing return type for special method (gradual migration)
    "ANN205", # missing return type for static method (gradual migration)
    "ANN206", # missing return type for class method (gradual migration)
    "ANN401", # dynamically typed expressions (Any) (gradual migration)
    "TC001",  # typing-only-first-party-import (gradual migration)
    "TC002",  # typing-only-third-party-import (gradual migration)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "D104", "E402"]
"tests/**/*.py" = ["S101", "S311", "S106", "S110", "S112", "S108", "S306", "S603", "S607", "ANN", "D"]
"mutants/tests/**/*.py" = ["S101", "S311", "S106", "S110", "S112", "S108", "S306", "S603", "S607", "ANN", "D"]
"panelbox/tests/**/*.py" = ["S101", "S311", "S106", "S110", "S112", "S108", "S306", "S603", "S607", "ANN", "D"]
"panelbox/gmm/test_*.py" = ["S101", "S311", "S106", "S110", "S112", "S108", "S306", "S603", "S607", "ANN", "D"]
"vulture_whitelist.py" = ["B018", "F821", "D100", "F811", "ANN"]
"**/*.ipynb" = ["E402", "E722", "N816", "S101", "S110", "B007", "B904", "B005", "D", "ANN", "F401", "F402", "F811", "F821", "F841", "N811", "N814", "S301", "S102", "S112", "S603", "S607", "PD101", "C901"]
"examples/**/*.py" = ["E402", "E722", "S101", "S110", "S112", "B007", "B904", "B005", "D", "ANN", "F401", "S301", "S102", "S108", "S306", "S603", "S607", "PD101", "C901", "N811"]
"benchmarks/**/*.py" = ["E402", "S101", "D", "ANN", "C901"]
"tests/benchmarks/**/*.py" = ["S101", "S311", "S106", "S110", "S112", "S108", "S306", "S603", "S607", "ANN", "D", "C901"]
"docs/**/*.py" = ["E402", "S101", "D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["panelbox"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"
include = ["panelbox"]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "desenvolvimento",
    "examples",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalOperand = false
reportOptionalIterable = false
reportGeneralTypeIssues = true
reportArgumentType = false
reportAttributeAccessIssue = false
reportReturnType = false
reportOperatorIssue = false
reportCallIssue = false
reportAssignmentType = false
reportIndexIssue = false
reportPrivateImportUsage = false
reportIncompatibleMethodOverride = false

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = true
fail-under = 80
exclude = [
    "tests",
    "desenvolvimento",
    "examples",
]
verbose = 1
color = true
omit-covered-files = true

[tool.setuptools.packages.find]
where = ["."]
include = ["panelbox*"]
exclude = ["desenvolvimento*", "tests*", "examples*"]

[tool.setuptools.package-data]
panelbox = [
    "py.typed",
    "datasets/data/*.csv",
    "datasets/data/*.dta",
    "templates/**/*.html",
    "templates/**/*.css",
    "templates/**/*.js",
]

[tool.mutmut]
paths_to_mutate = ["panelbox/standard_errors/"]
tests_dir = ["tests/standard_errors/"]
pytest_add_cli_args = ["-x", "--timeout=60", "-q", "--no-header", "-p", "no:randomly", "--ignore=tests/standard_errors/test_mle.py", "--ignore=tests/standard_errors/test_pcse.py", "--ignore=tests/standard_errors/test_spatial_hac.py"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.0,<9.0"
pytest-cov = "^7.0.0"
